structure for dependency jars